CI: Fix FILE test in the pxf-build pipeline [ci skip]

--- a/concourse/pipelines/templates/build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/build_pipeline-tpl.yml
@@ -921,6 +921,7 @@ jobs:
 ## ---------- FILE tests -----------------
 
 - name: Test PXF-GP[[gp_ver]]-FILE-NO-IMPERS on RHEL7
+  max_in_flight: 2
   plan:
   - in_parallel:
     - get: pxf_src
@@ -933,14 +934,75 @@ jobs:
       resource: gpdb[[gp_ver]]_rhel7_rpm_latest-0
       passed: [Testing Gate for PXF-GP]
     - get: gpdb[[gp_ver]]-pxf-dev-centos7-image
+    - get: ccp_src
+    - get: ccp-7-image
     - get: pxf-automation-dependencies
     - get: singlecluster
       resource: singlecluster-hdp2
+  - put: terraform_gpdb
+    resource: terraform
+    params:
+      action: create
+      delete_on_failure: true
+      generate_random_name: true
+      terraform_source: ccp_src/google/
+      vars:
+        PLATFORM: centos7
+        number_of_nodes: ((number_of_gpdb_nodes))
+        segments_per_host: 4
+        instance_type: n1-standard-4
+        ccp_reap_minutes: 60
+  - task: Generate Greenplum Cluster
+    input_mapping:
+      gpdb_rpm: gpdb_package
+      terraform: terraform_gpdb
+    file: ccp_src/ci/tasks/gen_cluster.yml
+    image: ccp-7-image
+    params:
+      AWS_ACCESS_KEY_ID: ((tf-machine-access-key-id))
+      AWS_SECRET_ACCESS_KEY: ((tf-machine-secret-access-key))
+      AWS_DEFAULT_REGION: ((aws-region))
+      BUCKET_PATH: ((tf-bucket-path))
+      BUCKET_NAME: ((tf-bucket-name))
+      PLATFORM: centos7
+      CLOUD_PROVIDER: google
+      GPDB_RPM: true
+  - task: Initialize Greenplum
+    file: ccp_src/ci/tasks/gpinitsystem.yml
+  - task: Setup NFS
+    input_mapping:
+      terraform: terraform_gpdb
+    file: pxf_src/concourse/tasks/install_nfs_on_ccp.yml
+    image: ccp-7-image
+    params:
+      BASE_PATH: /mnt/nfs/var/nfsshare
+  - task: Setup PXF
+    input_mapping:
+      terraform: terraform_gpdb
+    file: pxf_src/concourse/tasks/install_pxf_on_ccp.yml
+    image: ccp-7-image
+    params:
+      GP_VER: [[gp_ver]]
+      IMPERSONATION: true
+      INSTALL_GPHDFS: false
+      PXF_JVM_OPTS: ((pxf-jvm-opts))
+      SKIP_HADOOP_SETUP: true
   - task: Test PXF-GP[[gp_ver]]-FILE-NO-IMPERS on RHEL7
-    file: pxf_src/concourse/tasks/test.yml
+    on_success:
+      do:
+      - put: terraform_gpdb
+        resource: terraform
+        params:
+          action: destroy
+          env_name_file: terraform_gpdb/name
+          terraform_source: ccp_src/google/
+        get_params:
+          action: destroy
+    privileged: true
+    file: pxf_src/concourse/tasks/test_pxf_on_ccp.yml
     image: gpdb[[gp_ver]]-pxf-dev-centos7-image
     params:
-      BASE_PATH: /nfs/general
+      BASE_PATH: /mnt/nfs/var/nfsshare
       GP_VER: [[gp_ver]]
       GROUP: hcfs
       IMPERSONATION: false
