Add PXF upgrade test
Test upgrading from the Latest released version of PXF 5 to the PXF 6
version in the multinode environment.

--- a/concourse/pipelines/templates/dev_build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/dev_build_pipeline-tpl.yml
@@ -267,6 +267,16 @@ resources:
     json_key: ((concourse-gcs-resources-service-account-key))
     regexp: server/published/master/greenplum-db-(7.*)-rhel7-x86_64.rpm
 
+## ---------- PXF 5 Artifact ---------------
+{% if multinode %}
+- name: pxf5_gp6_rhel7_released
+  type: gcs
+  source:
+    bucket: ((pxf-releng-gp6-drop-bucket))
+    json_key: ((concourse-gcs-resources-service-account-key))
+    regexp: ((pxf-releng-gp6-drop-path))/pxf-gp6-5.(.*)-2.el7.x86_64.rpm
+{% endif %}
+
 ## ---------- PXF Build Artifacts ----------
 {% set gp_ver = 5 %}
 - name: pxf_gp[[gp_ver]]_tarball_rhel6
@@ -995,6 +1005,8 @@ jobs:
     - get: pxf_src
       passed: [Build PXF-GP[[gp_ver]] on RHEL7]
       trigger: true
+    - get: pxf_artifact
+      resource: pxf5_gp6_rhel7_released # for upgrade test
     - get: pxf_tarball
       resource: pxf_gp[[gp_ver]]_tarball_rhel7
       passed: [Build PXF-GP[[gp_ver]] on RHEL7]
@@ -1080,9 +1092,10 @@ jobs:
         NO_ADDRESS: false
         PROXY_USER: gpuser
         SECRETS_BUCKET: data-gpdb-ud-kerberos-pxf-secrets
-  - task: Setup PXF
+  - task: Setup PXF 5 Latest
     input_mapping:
       terraform: terraform_gpdb
+      pxf_tarball: pxf_tarball_ignore # do not install from the artifact
     file: pxf_src/concourse/tasks/install_pxf_on_ccp.yml
     image: ccp-7-image
     params:
@@ -1090,8 +1103,17 @@ jobs:
       IMPERSONATION: true
       INSTALL_GPHDFS: false
       KERBEROS: ((kerberos-enabled))
-      PXF_BASE_DIR: /home/gpadmin/pxf
       PXF_JVM_OPTS: ((pxf-jvm-opts))
+      PXF_VERSION: 5
+  - task: Upgrade to PXF 6
+    input_mapping:
+      terraform: terraform_gpdb
+    file: pxf_src/concourse/tasks/upgrade_pxf_on_ccp.yml
+    image: ccp-7-image
+    params:
+      GOOGLE_PROJECT_ID: ((google-project-id))
+      GP_VER: [[gp_ver]]
+      PXF_BASE_DIR: /home/gpadmin/pxf-boot
   - task: Test PXF-GP[[gp_ver]]-HDP2-SECURE-MULTI-IMPERS on RHEL7
     image: gpdb[[gp_ver]]-pxf-dev-centos7-image
     file: pxf_src/concourse/tasks/test_pxf_on_ccp.yml
@@ -1105,8 +1127,7 @@ jobs:
       GOOGLE_PROJECT_ID: ((google-project-id))
       GP_VER: [[gp_ver]]
       GROUP: security,proxySecurity,multiClusterSecurity
-      PXF_BASE_DIR: /home/gpadmin/pxf
-      PXF_JVM_OPTS: ((pxf-jvm-opts))
+      PXF_BASE_DIR: /home/gpadmin/pxf-boot
       TARGET_OS: centos
   - task: Test PXF CLI
     on_success:
