--- a/concourse/tasks/test_pxf_on_ccp.yml
+++ b/concourse/tasks/test_pxf_on_ccp.yml
@@ -28,6 +28,7 @@ params:
   PXF_BASE_DIR:
   PXF_COMPONENT: true
   PXF_JVM_OPTS:
+  PXF_VERSION: 6
   SECRET_ACCESS_KEY:
   TARGET_OS: centos
   TARGET_OS_VERSION: 7
