Add PXF CLI test to multinode test (#479)
After the RPM work was merged, the CLI test pipeline stopped working.
This PR restores the CLI tests, but it adds the test as a task in the
multinode impersonation job. This way, it reuses the setup, which is
expensive, and then the automation tests run after the CLI tests are
successful.

--- a/concourse/pipelines/templates/build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/build_pipeline-tpl.yml
@@ -1189,6 +1189,7 @@ jobs:
             segments_per_host: 4
             instance_type: n1-standard-4
             ccp_reap_minutes: 120
+            standby_master: true
       - task: Generate Greenplum Cluster
         input_mapping:
           gpdb_rpm: gpdb_package
@@ -1257,8 +1258,6 @@ jobs:
       KERBEROS: ((kerberos-enabled))
       PXF_JVM_OPTS: ((pxf-jvm-opts))
   - task: Test PXF-GP[[gp_ver]]-HDP2-SECURE-MULTI-IMPERS on RHEL7
-    on_success:
-      <<: *destroy_clusters
     image: gpdb[[gp_ver]]-pxf-dev-centos7-image
     file: pxf_src/concourse/tasks/test_pxf_on_ccp.yml
     attempts: 2
@@ -1273,6 +1272,14 @@ jobs:
       GROUP: security,proxySecurity,multiClusterSecurity
       PXF_JVM_OPTS: ((pxf-jvm-opts))
       TARGET_OS: centos
+  - task: Test PXF CLI
+    on_success:
+      <<: *destroy_clusters
+    image: gpdb[[gp_ver]]-pxf-dev-centos7-image
+    file: pxf_src/concourse/tasks/test_pxf_cli.yml
+    params:
+      TARGET_OS: centos
+      TARGET_OS_VERSION: 7
 
 - name: Test PXF-GP[[gp_ver]]-HDP2-SECURE-MULTI-NO-IMPERS on RHEL7
   max_in_flight: 2
