--- a/concourse/pipelines/templates/dev_build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/dev_build_pipeline-tpl.yml
@@ -1007,6 +1007,7 @@ jobs:
             segments_per_host: 4
             instance_type: n1-standard-4
             ccp_reap_minutes: 120
+            standby_master: true
       - task: Generate Greenplum Cluster
         input_mapping:
           gpdb_rpm: gpdb_package
@@ -1075,8 +1076,6 @@ jobs:
       KERBEROS: ((kerberos-enabled))
       PXF_JVM_OPTS: ((pxf-jvm-opts))
   - task: Test PXF-GP[[gp_ver]]-HDP2-SECURE-MULTI-IMPERS on RHEL7
-    on_success:
-      <<: *destroy_clusters
     image: gpdb[[gp_ver]]-pxf-dev-centos7-image
     file: pxf_src/concourse/tasks/test_pxf_on_ccp.yml
     attempts: 2
@@ -1091,6 +1090,14 @@ jobs:
       GROUP: security,proxySecurity,multiClusterSecurity
       PXF_JVM_OPTS: ((pxf-jvm-opts))
       TARGET_OS: centos
+  - task: Test PXF CLI
+    on_success:
+      <<: *destroy_clusters
+    image: gpdb[[gp_ver]]-pxf-dev-centos7-image
+    file: pxf_src/concourse/tasks/test_pxf_cli.yml
+    params:
+      TARGET_OS: centos
+      TARGET_OS_VERSION: 7
 {% if slack_notification %}
     <<: *slack_alert
 {% endif %}
