WASB: Add missing dependency (#488)
After the Spring Boot merge, it appears there's a missing dependency for
WASB. This commit adds the missing dependency

--- a/server/pxf-hdfs/build.gradle
+++ b/server/pxf-hdfs/build.gradle
@@ -72,8 +72,9 @@ dependencies {
 
     // Azure Datalake jars
     implementation("org.apache.hadoop:hadoop-azure-datalake:${hadoopVersion}") { transitive = false }
-    implementation("com.microsoft.azure:azure-data-lake-store-sdk:2.3.8")      { transitive = false }
+    implementation("com.microsoft.azure:azure-data-lake-store-sdk:2.3.9")      { transitive = false }
     implementation("org.wildfly.openssl:wildfly-openssl:1.0.7.Final")          { transitive = false }
+    implementation("org.mortbay.jetty:jetty-util:6.1.26")                      { transitive = false }
 
     // GCS jars and dependencies
     implementation("com.google.cloud.bigdataoss:gcs-connector:hadoop2-1.9.17:shaded") { transitive = false }
