Upgrade to Spring Boot 2.4.0

--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -25,7 +25,7 @@ junitVersion=4.11
 pxfProtocolVersion=v15
 parquetVersion=1.11.1
 awsJavaSdk=1.11.801
-spring_boot_version=2.3.4.RELEASE
+spring_boot_version=2.4.0
 org.gradle.daemon=true
 org.gradle.parallel=false
 lfScanConfiguration=bootJar
