--- a/server/pxf-service/build.gradle
+++ b/server/pxf-service/build.gradle
@@ -59,9 +59,7 @@ dependencies {
     testImplementation("commons-io:commons-io")
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 bootJar {
@@ -73,7 +71,7 @@ bootJar {
 }
 
 springBoot {
-    mainClassName = "org.greenplum.pxf.service.PxfServiceApplication"
+    mainClass = "org.greenplum.pxf.service.PxfServiceApplication"
     buildInfo()
 }
 
