--- a/server/pxf-hbase/build.gradle
+++ b/server/pxf-hbase/build.gradle
@@ -41,9 +41,7 @@ dependencies {
     testCompileOnly("com.google.code.findbugs:annotations:1.3.9")
     testCompileOnly("org.apache.hbase:hbase-annotations:${hbaseVersion}")
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 test {
