--- a/server/pxf-hdfs/build.gradle
+++ b/server/pxf-hdfs/build.gradle
@@ -91,10 +91,7 @@ dependencies {
     // for parquet tests
     testImplementation("org.apache.parquet:parquet-pig:${parquetVersion}")
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
-
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 test {
