--- a/server/pxf-hive/build.gradle
+++ b/server/pxf-hive/build.gradle
@@ -78,9 +78,7 @@ dependencies {
      * Test Dependencies
      *******************************/
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 test {
