--- a/server/pxf-jdbc/build.gradle
+++ b/server/pxf-jdbc/build.gradle
@@ -46,9 +46,7 @@ dependencies {
 
     testImplementation("org.apache.parquet:parquet-pig:${parquetVersion}")
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 test {
