--- a/server/pxf-json/build.gradle
+++ b/server/pxf-json/build.gradle
@@ -31,9 +31,7 @@ dependencies {
 
     testCompileOnly("org.apache.hadoop:hadoop-annotations:${hadoopVersion}")
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 test {
