--- a/server/pxf-s3/build.gradle
+++ b/server/pxf-s3/build.gradle
@@ -33,10 +33,7 @@ dependencies {
      * Test Dependencies
      *******************************/
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
-
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 test {
