Serialize Fragment metadata using Kryo (#486)
In PXF 5.16.0, we introduced Kryo to serialize Fragment's userData for
Hive profiles. The original version of boot, combines Fragment metadata
and userData into metadata. It also serializes metadata into a escaped
JSON, that is then deserialized by the HttpRequestParser during the
bridge call. This introduces a regression in the Hive metadata
optimization. To reduce the payload size, we now serialize metadata
using kryo instead of JSON. This commit fixes the regression introduced
by the original version of boot.

--- a/server/pxf-service/build.gradle
+++ b/server/pxf-service/build.gradle
@@ -56,6 +56,7 @@ dependencies {
      *******************************/
 
     testCompileOnly("org.apache.hadoop:hadoop-annotations:${hadoopVersion}")
+    testImplementation("com.esotericsoftware:kryo:3.0.3")
     testImplementation("commons-io:commons-io")
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
