--- a/server/pxf-api/build.gradle
+++ b/server/pxf-api/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation("com.fasterxml.woodstox:woodstox-core:5.0.3") { transitive = false }
     implementation("com.fasterxml.jackson.core:jackson-core") { transitive = false }
     implementation("com.fasterxml.jackson.core:jackson-databind") { transitive = false }
+    implementation("com.esotericsoftware:kryo:3.0.3") { transitive = false }
 
     /*******************************
      * Test Dependencies
@@ -52,6 +53,8 @@ dependencies {
 
     testCompileOnly("org.apache.hadoop:hadoop-annotations:${hadoopVersion}")
 
+    testImplementation("com.esotericsoftware:minlog:1.3.0")
+    testImplementation("com.esotericsoftware:reflectasm:1.11.6")
     testImplementation('org.mockito:mockito-inline:3.1.0')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
