--- a/server/pxf-hbase/build.gradle
+++ b/server/pxf-hbase/build.gradle
@@ -38,6 +38,8 @@ dependencies {
      * Test Dependencies
      *******************************/
 
+    testImplementation("com.esotericsoftware:minlog:1.3.0")
+    testImplementation("com.esotericsoftware:reflectasm:1.11.6")
     testCompileOnly("com.google.code.findbugs:annotations:1.3.9")
     testCompileOnly("org.apache.hbase:hbase-annotations:${hbaseVersion}")
 
