--- a/cli/go/src/pxf-cli/Makefile
+++ b/cli/go/src/pxf-cli/Makefile
@@ -1,6 +1,6 @@
 include ../../../../common.mk
 
-.PHONY: all depend build stage install test clean help
+.PHONY: all build stage install test clean help
 .DEFAULT_GOAL := build
 
 TARGET := $(shell echo $${PWD\#\#*/})
@@ -10,14 +10,12 @@ PXF_CLI_DIR := ${PXF_ROOT_DIR}/cli
 PXF_VERSION ?= $(shell cat $(PXF_ROOT_DIR)/version)
 
 LDFLAGS := -ldflags "-X ${TARGET}/cmd.version=${PXF_VERSION}"
-GO_DEP_CACHE := ${PXF_ROOT_DIR}/cli/go/pkg/dep
 GOPATH := ${PXF_ROOT_DIR}/cli/go
 
 help:
 	@echo
 	@echo   "Possible targets"
-	@echo	"  - all (depend, build, test, stage, install)"
-	@echo	"  - depend - fetch all Go dependencies"
+	@echo	"  - all (build, test, stage, install)"
 	@echo	"  - build - build pxf-cli binary"
 	@echo	"  - test - runs tests for pxf-cli binary"
 	@echo	"  - stage - install pxf-cli binary into build/stage/pxf/bin directory"
@@ -26,14 +24,7 @@ help:
 
 all: test stage install
 
-depend:
-	@if [ -d $(HOME)/.go-dep-cached-sources ] && [ ! -d ${GO_DEP_CACHE}/sources ]; then \
-		mkdir -p ${GO_DEP_CACHE}; \
-		ln -s $(HOME)/.go-dep-cached-sources ${GO_DEP_CACHE}/sources; \
-	fi
-	@dep ensure -v
-
-build: depend
+build:
 	go build -v ${LDFLAGS}
 	go install ${LDFLAGS}
 
