Restore FDW Build (#506)
- Modify the top-level Makefile to support building the FDW extension
  and external table extension depending on the PG_CONFIG version
- Add new fdw make target in the top-level Makefile
- Add GP7 RHEL7 build job to the pxf-build pipeline
- Add GP7 RHEL7 build job to the dev pipelines
- Fix Java 11 compilation issues
- Add GP7 RHEL7 build job to the PR pipeline
- Fix FDW compilation issues against GP7
- Fix FDW write, do not execute write for FDW when the exec_location is
  all segments and the role is master.
- Add RPM spec file for GP7
- Add support for `pxf [cluster] register` for GP7. `pxf [cluster]
  register` will now register the pxf_fdw extension for the GP7 RPM.
- Update README to include Java 11 build support
- Master build is now moved to the pxf-build pipeline

--- a/concourse/docker/pxf-dev-base/gpdb7/ubuntu18.04/Dockerfile
+++ b/concourse/docker/pxf-dev-base/gpdb7/ubuntu18.04/Dockerfile
@@ -8,15 +8,9 @@ RUN mkdir -p /tmp/pxf_src/ && cd /tmp \
     && tar -C /usr/local -xzf go.tgz && rm go.tgz \
     && GOPATH=/opt/go /usr/local/go/bin/go get github.com/onsi/ginkgo/ginkgo
 
-# add Java 11
-RUN wget -q https://download.java.net/openjdk/jdk11/ri/openjdk-11+28_linux-x64_bin.tar.gz \
-    && mkdir -p /usr/lib/jvm \
-    && tar -C /usr/lib/jvm -xzf openjdk-11+28_linux-x64_bin.tar.gz \
-    && rm -f openjdk-11+28_linux-x64_bin.tar.gz
-
-# install dependencies that are missing on the base images
+# install java 11 and dependencies that are missing on the base images
 RUN apt-get update -y \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -y curl sudo \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y curl sudo openjdk-11-jdk \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
