Docker: Add java 8 to the gpdb7 centos 7 image to support hadoop (#509)
Hadoop does not support java 11 yet, and many issues arise with data
prep when hadoop/hive/hbase run on java 11. We need java 8 to be able to
run hadoop services correctly.

--- a/concourse/pipelines/templates/dev_build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/dev_build_pipeline-tpl.yml
@@ -398,9 +398,7 @@ jobs:
   - put: pxf_gp[[gp_ver]]_tarball_rhel7
     params:
       file: dist/pxf-gp[[gp_ver]]-*.el7.tar.gz
-{% endfor %}
 
-{% for gp_ver in range(5, 7) %}
 - name: Test PXF-GP[[gp_ver]]-HDP2 on RHEL7
   plan:
   - in_parallel:
@@ -424,7 +422,12 @@ jobs:
     params:
       ACCESS_KEY_ID: ((tf-machine-access-key-id))
       GP_VER: [[gp_ver]]
+{% if gp_ver == 7 %}
+      GROUP: fdw_gpdb_schedule,fdw_proxy_schedule
+      HADOOP_JAVA_HOME: /usr/lib/jvm/jre-1.8.0-openjdk
+{% else %}
       GROUP: gpdb,proxy,profile
+{% endif %}
       SECRET_ACCESS_KEY: ((tf-machine-secret-access-key))
       TARGET_OS: centos
       TARGET_OS_VERSION: 7
