Add FDW_FilterPushDownTest to the fdw_gpdb_schedule

--- a/concourse/pipelines/templates/dev_build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/dev_build_pipeline-tpl.yml
@@ -433,8 +433,9 @@ jobs:
       ACCESS_KEY_ID: ((tf-machine-access-key-id))
       GP_VER: [[gp_ver]]
 {% if gp_ver == 7 %}
-      GROUP: fdw_gpdb_schedule,fdw_proxy_schedule
+      GROUP: fdw_gpdb_schedule
       HADOOP_JAVA_HOME: /usr/lib/jvm/jre-1.8.0-openjdk
+      PG_REGRESS: true
 {% else %}
       GROUP: gpdb,proxy,profile
 {% endif %}
